# image_matching

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  post_build.sh  ruff.toml  setup.cfg  setup.py
.github/workflows/: build.yml  deps.repos
cfg/: image_matching_ukf.yaml
image_matching/: detector.py  image_brighten_node.py  matcher_service.py  pose_auto_labeller_node.py  pose_estimator_node.py  pose_estimator_node_dev.py  pose_estimator_node_multiple.py  simple_matcher_node.py  simple_pose_estimator_node.py  test_xfeat.py  unused.py  visual_odometry.py  xfeat_output.py
launch/: bootlegger_pose_estimator.launch  bootlegger_pose_estimator_dev.launch  detector.launch  new_torpedo_pose_estimator.launch  octagon_pose_estimator_dev.launch  pose_estimator.launch  pose_estimator.launch.py  pose_estimator_dev.launch  robotx24_pose_estimator.launch.py  simple_pose_estimator.launch.py
msg/: KeypointsDict.msg
scripts/: annotation.py  detector.py  detector_node.py  matcher_node.py  matcher_service.py  pose_auto_labeller_node.py  pose_estimator_node.py  pose_estimator_node_dev.py  test_node.py  visual_odometry.py  vo_node.py
src/feature_matcher/: coarse_loftr_matcher.py  dkm_matcher.py  keypoints.py  keypoints_match_producer.py  kornia_loftr_matcher.py  loftr_matcher.py  loftr_torchscript_matcher.py  tools.py  two_stage_match_producer.py  xfeat.py
src/feature_matcher/keypoint_matcher/: __init__.py  bf.py  flann.py  lightglue.py  superglue.py  xfeat.py
src/feature_matcher/keypoint_producer/: KeyAffHard.py  __init__.py  alike.py  dalf.py  disk.py  fast.py  orb.py  sift.py  superpoint.py  xfeat.py
src/pose_estimator/: PinholeCamera.py  __init__.py  pose_estimator.py  pose_weighted_average.py
src/utils/: logging.py  ros_np_multiarray.py  wait_for_message.py
srv/: MatchImages.srv  MatchToTemplate.srv  RegisterImage.srv
templates/: templates.json
templates/robosub25/: templates.json
templates/robosub26/: templates.json
tests/: test_export.py  test_matcher_service.py
