<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_matching</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="koh.benjamin@u.nus.edu">b3nguin</maintainer>
  <license>MIT</license>

  <exec_depend>python-transforms3d-pip</exec_depend>

  <depend>bb_msgs</depend>
  <depend>image_transport</depend>
  <depend>python-opencv-contrib-pip</depend>
  <depend>python3-imutils-pip</depend>
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
